Vivado Project/PraticewithI2C_Inter.sdk/.metadata/.plugins/org.eclipse.cdt.ui/Test_Gyro.build.log
01:12:39 **** Auto Build of configuration Debug for project Test_Gyro ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/platform/I2Cdev.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/platform/I2Cdev.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform/I2Cdev.d" -MT"src/platform/I2Cdev.o" -o "src/platform/I2Cdev.o" "../src/platform/I2Cdev.cpp"
'Finished building: ../src/platform/I2Cdev.cpp'
' '
'Building file: ../src/platform/i2c.c'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/platform/i2c.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform/i2c.d" -MT"src/platform/i2c.o" -o "src/platform/i2c.o" "../src/platform/i2c.c"
'Finished building: ../src/platform/i2c.c'
' '
'Building file: ../src/platform/interrupt.c'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/platform/interrupt.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/platform/interrupt.d" -MT"src/platform/interrupt.o" -o "src/platform/interrupt.o" "../src/platform/interrupt.c"
'Finished building: ../src/platform/interrupt.c'
' '
'Building file: ../src/imu/MPU6050.cpp'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/imu/MPU6050.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/imu/MPU6050.d" -MT"src/imu/MPU6050.o" -o "src/imu/MPU6050.o" "../src/imu/MPU6050.cpp"
'Finished building: ../src/imu/MPU6050.cpp'
' '
'Building file: ../src/imu/imu.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/imu/imu.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/imu/imu.d" -MT"src/imu/imu.o" -o "src/imu/imu.o" "../src/imu/imu.cc"
'Finished building: ../src/imu/imu.cc'
' '
'Building file: ../src/hexapod_leg/comm.c'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/hexapod_leg/comm.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/hexapod_leg/comm.d" -MT"src/hexapod_leg/comm.o" -o "src/hexapod_leg/comm.o" "../src/hexapod_leg/comm.c"
'Finished building: ../src/hexapod_leg/comm.c'
' '
'Building file: ../src/hexapod_leg/joint_controls.c'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/hexapod_leg/joint_controls.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/hexapod_leg/joint_controls.d" -MT"src/hexapod_leg/joint_controls.o" -o "src/hexapod_leg/joint_controls.o" "../src/hexapod_leg/joint_controls.c"
'Finished building: ../src/hexapod_leg/joint_controls.c'
' '
'Building file: ../src/hexapod_leg/leg.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/hexapod_leg/leg.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/hexapod_leg/leg.d" -MT"src/hexapod_leg/leg.o" -o "src/hexapod_leg/leg.o" "../src/hexapod_leg/leg.cc"
'Finished building: ../src/hexapod_leg/leg.cc'
' '
'Building file: ../src/hexapod/hexapod.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/hexapod/hexapod.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/hexapod/hexapod.d" -MT"src/hexapod/hexapod.o" -o "src/hexapod/hexapod.o" "../src/hexapod/hexapod.cc"
'Finished building: ../src/hexapod/hexapod.cc'
' '
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -I"C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include" -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../Test_Gyro_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
../src/main.cc: In function 'int main()':
../src/main.cc:16:20: error: no matching function for call to 'IMU::setup(int&)'
   Imu.setup(intrPin);
                    ^
In file included from ../src/main.cc:3:0:
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include/imu.h:29:6: note: candidate: int IMU::setup(int, void*, volatile bool*)
  int setup (int intrPin, void * dmpDataReadyCallBack, volatile bool* flagVar);
      ^~~~~
C:\Users\Frien\PraticewithI2C_Inter\PraticewithI2C_Inter.sdk\Test_Gyro\include/imu.h:29:6: note:   candidate expects 3 arguments, 1 provided
make: *** [src/main.o] Error 1

01:12:43 Build Finished (took 3s.699ms)

